--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "installCommand": "npm install --legacy-peer-deps",
-        "buildCommand": "CI=false npm run build"
+        "installCommand": "npm install",
+        "buildCommand": "npm run build",
+        "distDir": "build"
       }
     }
   ],
