--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^8.20.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
-    "cloudinary": "^1.35.0",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
+    "cloudinary": "^2.6.0",
     "cloudinary-react": "^1.8.1",
-    "date-fns": "^2.29.3",
-    "firebase": "^9.17.2",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.6.1",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-barcode-reader": "^0.0.2",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
-    "react-to-pdf": "^0.0.14",
-    "uuid": "^9.0.0",
+    "react-select": "^5.10.1",
+    "react-to-pdf": "^2.0.0",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
